tests/ucc/type/good/fun-no-void.c
int f()
{
    return 0;
}

int main(void)
{
    int a;

    return f(a, 0, 0);
}
