tests/ucc/type/bad/too-few-args-1.c
int f(int a)
{
    return a;
}

int main(void)
{
    int a;

    return f();
}
